apps/production/nextcloud/ingress.yaml
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ts-nextcloud-ingress
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: nextcloud-http
#       port:
#         number: 80
#   tls:
#     - hosts:
#         - nxc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: nxc.boxadvisers.com
    http:
      paths:
      - backend:
          service:
            name: nextcloud-http
            port:
              number: 80
        path: /
        pathType: Prefix
